fixed windows wrong country selection width, horizontal scrollbar is now global (#1084)

--- a/webapp/components/CountrySelect/countrySelect.scss
+++ b/webapp/components/CountrySelect/countrySelect.scss
@@ -12,7 +12,7 @@
   border-bottom: $ui-thin-border;
   height: 50px;
   box-shadow: 0 2px 4px 0px rgba($text-body, 0.5);
-  width: 100vw;
+  width: 100%;
 
   .text-input {
     width: 100%;
