--- a/webapp/main/styles/fraTable.less
+++ b/webapp/main/styles/fraTable.less
@@ -9,7 +9,7 @@
 }
 
 .fra-table__scroll-wrapper {
-  overflow-x: auto;
+  // overflow-x: auto;
   width: 100%;
 }
 
